updated plugins